# gazodeanki

./: .gitignore  README.md  pyproject.toml
gazodeanki/: cli.py  decks.json  dl_firsthit_pixabay_img.py
memo/: spec.md
