[tool.poetry]
name = "gazodeanki"
version = "0.1.0"
description = ""
authors = ["elprebit <junichinomori@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.24.1"
click = "^8.1.7"
term-image = "^0.7.2"
selenium = "^4.25.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
